--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
+    "react-redux": "^7.1.0-rc.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "styled-components": "^4.3.2"
