--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0-rc.1",
     "react-scripts": "3.0.1",
+    "react-slick": "^0.25.2",
     "redux": "^4.0.4",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
