--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "3.0.1",
     "react-slick": "^0.25.2",
     "redux": "^4.0.4",
+    "redux-saga": "^1.0.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.3.2"
   },
